fixed leaderboard spacing

--- a/aws-project-agent/src/index.css
+++ b/aws-project-agent/src/index.css
@@ -108,17 +108,17 @@ td {
     border-collapse: separate;
     border-spacing: 0 10px;
     td:nth-child(1) {
-      border-top-left-radius: 30px;
-      border-bottom-left-radius: 30px;
-      width: 10%;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      width: 5%;
     }
     td:nth-child(2) {
-      width: 45%;
+      width: 50%;
     }
     td:nth-child(3) {
-      border-top-right-radius: 30px;
-      border-bottom-right-radius: 30px;
-      width: 45%;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      width: 50%;
     }
 }
 
