--- a/aws-project-supervisor/src/global.css
+++ b/aws-project-supervisor/src/global.css
@@ -212,34 +212,26 @@ select {
 
 
 /* Table Styles */
-.table3 td:nth-child(3) {
-    text-align: center;
-}
-
-/* Pic / Agent */
-.table3 td:nth-child(2) {
-    text-align: center;
-}
-
-/* Rank */
-.table3 td:nth-child(1) {
-    text-align: left;
-}
-
-.table3 tr:not(:last-child) {
-    border-bottom: 10px solid white;
-    /* Add a white border between rows */
-
-}
 
 .table3 {
-    padding-left: 20px;
-    /* Add left padding */
-    padding-right: 20px;
-    /* Add right padding */
-    width: 100%;
-    border-spacing: 0px 20px;
-    /* Spacing between rows */
+    margin: 0 20px 0 20px;
+    width: calc(100vw - 50px);
+    border-collapse: separate;
+    border-spacing: 0 10px;
+    text-align: center;
+    td:nth-child(1) {
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      width: 5%;
+    }
+    td:nth-child(2) {
+      width: 50%;
+    }
+    td:nth-child(3) {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      width: 50%;
+    }
 }
 
 
@@ -263,5 +255,5 @@ select {
 .rank-badge {
     height: calc(1em + 22px);
     position: absolute;
-    transform: translate(0%, -50%);
+    transform: translate(-50%, -50%);
 }
