--- a/aws-project-supervisor/src/index.css
+++ b/aws-project-supervisor/src/index.css
@@ -94,11 +94,11 @@ code {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background-color: #fafafa;
+  background-color: #fff;
   padding-top: 2%;
   padding-bottom: 2%;
   padding-left: 1%;
-  border-bottom: 2px solid #ccc;
+  border-bottom: none;
   /* Bottom border */
 }
 
@@ -147,7 +147,7 @@ h1 {
 }
 
 .flexcompareFilters select {
-  background-color: #FFA500;
+  background-color: #FF9900;
   /*or white*/
   color: black;
   padding: 5px 15px;
@@ -155,6 +155,9 @@ h1 {
   border-radius: 15px;
   font-size: 16px;
   border: none;
+  option {
+    background-color: #fff;
+  }
 }
 
 #compareAll {
@@ -165,7 +168,7 @@ h1 {
 
 /* Apply Button */
 .updateButton {
-  background-color: #FFA500;
+  background-color: #FF9900;
   border: none;
   box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.238);
   font-size: 18px;
@@ -189,7 +192,7 @@ h1 {
 
 /* LEADERBOARD */
 #leaderboardbutton {
-  background-color: #FFA500;
+  background-color: #FF9900;
   margin-left: 0%;
   margin-right: 10px;
   margin-top: 10px;
